# Marketer-Agent

./: .env.example  CLAUDE.md  README.md  pyproject.toml
app/: config.py  logging_setup.py  main.py
app/agents/: cmo_agent.py  cmo_agent_service.py  context.py  factory.py  mcp_client.py  prompts.py  registry.py  runtime.py  x_sub_agent_service.py
app/approval/: agents.py  bot.py  handlers.py  session_store.py
app/db/: __init__.py  migrations.py  pool.py  queries.py  setup.py
app/mcp/: all_mcp.py  product_kb.py  web_search.py
app/models/: __init__.py  post.py  post_idea.py  product_kb.py  signal.py  state_machine.py
app/signals/: reddit_collector.py
app/tools/: posts.py  utm_builder.py
docs/: 01-overview.md  02-tech-stack.md  03-project-structure.md  04-database-schema.md  05-configuration.md  06-mcp-servers.md  07-agents.md  08-telegram-bot.md  09-publisher-and-analytics.md  10-logging.md  11-deployment.md  12-testing.md  13-implementation-order.md  14-acceptance-criteria.md  15-coding-agent-notes.md  README.md
docs/superpowers/plans/: 2026-04-28-reddit-collector.md  2026-04-29-posts-tools-utm-builder.md  2026-04-30-agent-refactor.md  2026-04-30-x-sub-agent.md
docs/superpowers/specs/: 2026-04-28-reddit-collector-design.md  (+3 more)
migrations/: 001_initial_schema.sql
scripts/: test_x_subagent.py
tests/: conftest.py  test_db.py  test_mcp_client.py  test_mcp_web_search.py  test_posts_tools.py  test_product_kb_setup.py  test_reddit_collector.py  test_state_machine.py  test_telegram_bot.py  test_utm_builder.py  test_x_sub_agent.py
